prep step cointent misc updates

--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -8,7 +8,7 @@
                     Please note the following before creating a community account:
                 </p>
                 <p>
-                    <strong>01 Accounts created in the sandbox Hub can be created with the agreements that are needed on the live Hub.</strong> 
+                    <strong>01 Accounts created in the sandbox Hub can be created without the agreements that are needed on the live Hub.</strong> 
                     The sandbox Hub can be used for testing Hub workflows. Accounts created in the sandbox Hub have limited functionality to 
                     protect the integrity of the Labels and Notices.
                     <br><br>   
@@ -59,11 +59,11 @@
                     Please note the following before creating an institution account:
                 </p>
                 <p>
-                    <strong>1. Accounts created in the sandbox Hub can be created with the agreements that are needed on the live Hub.</strong> 
+                    <strong>01 Accounts created in the sandbox Hub can be created without the agreements that are needed on the live Hub.</strong> 
                     The sandbox Hub can be used for testing Hub workflows. Accounts created in the sandbox Hub have limited functionality to protect the integrity of the Labels and Notices.
                     <br><br>
 
-                    <strong>2. As the creator of this new account, you will become the main administrator by default. </strong>
+                    <strong>02 An institution account is for a cultural or research institution, data repository, or other organization that will use Notices. </strong>
                     An archive, library, museum, historical society, gallery, data repository, university, research lab, or media production company 
                     might create an institution account. This account will represent your organization on the Hub and potentially in relationships 
                     with sovereign Indigenous communities. If you are an Indigenous institution and plan to use Labels on behalf of your community, 
@@ -71,7 +71,7 @@
                     if you have any questions.
                     <br><br>
 
-                    <strong>3. As the creator of this new account, you will become the main administrator by default.</strong>
+                    <strong>03 As the creator of this new account, you will become the main administrator by default.</strong>
                     As the main administrator, you will be the point of contact for the account and responsible for adding other 
                     users to the account. If you would like to change the account contact or your role after creating your account, 
                     please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a>.
@@ -82,18 +82,18 @@
                     Please note the following before creating an institution account:
                 </p>
                 <p>
-                    <strong>1. An institution account is for a cultural or research institution, data repository, or other organization that will use Notices.</strong> 
+                    <strong>01 An institution account is for a cultural or research institution, data repository, or other organization that will use Notices.</strong> 
                     An archive, library, museum, historical society, gallery, data repository, university, research lab, or media production company might create an institution account. 
                     This account will represent your organization on the Hub and potentially in relationships with sovereign Indigenous communities. If you are an Indigenous institution 
                     and plan to use Labels on behalf of your community, a community account may be a better fit. Please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a> if you have any questions.
                     <br><br>
 
-                    <strong>2. As the creator of this new account, you will become the main administrator by default. </strong>
+                    <strong>02 As the creator of this new account, you will become the main administrator by default. </strong>
                     As the main administrator, you will be the point of contact for the account and responsible for adding other users to the account. If you would like to change the 
                     account contact or your role after creating your account, please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a>.
                     <br><br>
 
-                    <strong>3. A subscription program for institution accounts will be launched in October 2024.</strong>
+                    <strong>03 A subscription program for institution accounts will be launched in October 2024.</strong>
                     More information about this program is available on our 
                     <a class="default-a" href="https://localcontexts.org/generational-sustainability-of-local-contexts/" target="_blank" rel="noopener">website blog</a> 
                     and <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank" rel="noopener">subscribers page</a>. 
@@ -111,12 +111,12 @@
                     Please note the following before creating a researcher account:
                 </p>
                 <p>
-                    <strong>1. Accounts created in the sandbox Hub can be created with the agreements that are needed on the live Hub.</strong> 
+                    <strong>01 Accounts created in the sandbox Hub can be created without the agreements that are needed on the live Hub.</strong> 
                     The sandbox Hub can be used for testing Hub workflows. Accounts created in the sandbox Hub have limited functionality to 
                     protect the integrity of the Labels and Notices.
                     <br><br>
 
-                    <strong>2. A researcher account is for an individual who carries out academic or scientific research independently or 
+                    <strong>02 A researcher account is for an individual who carries out academic or scientific research independently or 
                         in an institution and who will use Notices.</strong>
                         Researcher accounts are only for one user. This account will represent you on the Hub and potentially in relationships with sovereign Indigenous communities.
                     <br><br>
@@ -127,11 +127,11 @@
                     Please note the following before creating a researcher account:
                 </p>
                 <p>
-                    <strong>1. A researcher account is for an individual who carries out academic or scientific research independently or in an institution and who will use Notices.</strong> 
+                    <strong>01 A researcher account is for an individual who carries out academic or scientific research independently or in an institution and who will use Notices.</strong> 
                     Researcher accounts are only for one user. This account will represent you on the Hub and potentially in relationships with sovereign Indigenous communities.
                     <br><br>
 
-                    <strong>2. A subscription program for researcher accounts will be launched in October 2024. </strong>
+                    <strong>02 A subscription program for researcher accounts will be launched in October 2024. </strong>
                     More information about this program is available on our 
                     <a class="default-a" href="https://localcontexts.org/generational-sustainability-of-local-contexts/" target="_blank" rel="noopener">website blog</a> 
                     and <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank" rel="noopener">subscribers page</a>. 
