--- a/templates/account-settings-base.html
+++ b/templates/account-settings-base.html
@@ -55,16 +55,14 @@
                 </a>
             {% endif %}
 
-            {% if not community%}
-                <a href="{% if institution %}{% url 'institution-api-key' institution.id %}{% endif %}{% if researcher %}{% url 'researcher-api-key' researcher.id %}{% endif %}">
-                    <div class="flex-this side-nav-item {% if '/api-key/' in request.path %} selected {% else %} grey-text {% endif %}">
-                        <div class="w-20 margin-right-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
-                        <div class="w-80">
-                            <p class="no-top-margin"><strong>API Keys</strong><br>Manage API Keys</p>
-                        </div>
+            <a href="{% if community %}{% url 'community-api-key' community.id %}{% endif %}{% if institution %}{% url 'institution-api-key' institution.id %}{% endif %}{% if researcher %}{% url 'researcher-api-key' researcher.id %}{% endif %}">
+                <div class="flex-this side-nav-item {% if '/api-key/' in request.path %} selected {% else %} grey-text {% endif %}">
+                    <div class="w-20 margin-right-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
+                    <div class="w-80">
+                        <p class="no-top-margin"><strong>API Keys</strong><br>Manage API Keys</p>
                     </div>
-                </a>
-            {% endif %}
+                </div>
+            </a>
         </div>
 
         <!-- Right side of the settings div -->
