--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -11,7 +11,7 @@
                 {% if user_role == 'is_creator' %}
                     It looks like you are the main administrator of an account.
                     Please email us at
-                    <a href="mailto:support@localcontexts.org">support@localcontexts.org</a>
+                    <a href="mailto:support@localcontexts.org" class="default-a">support@localcontexts.org</a>
                     for deactivation assistance.
                 {% elif user_role == 'is_member' %}
                     It looks like you're a member of an account. Before you can deactivate your user profile,
