--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -286,6 +286,15 @@
             </div>
         </div>
 
+        <!-- Project Boundary -->
+        <div class="content-card-v2 content-card-space">
+            <h3>Project Boundary</h3>
+
+            <div class="margin-bottom-1 margin-top-1 w-80">
+                {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' %}
+            </div>
+        </div>
+
         <!-- Project Visibility/Privacy -->
         <div class="content-card-v2 content-card-space">
             <h3>Visibility</h3>
