feat: when creating project, boundary widget has create_mode=True

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -200,7 +200,7 @@
     </div>
 
     <div class="save-cancel-container w-90 flex-this flex-start">
-        <div>
+        <div class="{% if create_mode %}invisible{% endif %}">
             <a
                 id="community-boundary-continue-btn"
                 class="primary-btn action-btn disabled-btn margin-right-8"
