--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -268,6 +268,9 @@
     function clearNLInput(selectionUnit) {
        selectionUnit.querySelector('.input-field.search').value = ''
     }
+    function clearShapeFileInput(selectionUnit) {
+       selectionUnit.querySelector('.input-field.select-file-input').value = ''
+    }
     function hideSearchDropDown() {
        document.querySelector('.region-results').innerHTML = ''
     }
@@ -327,7 +330,7 @@
                 boundary: boundaryCoordinates
             }
             setViewLocationsHref(selectionUnit, boundaryCoordinates)
-            selectionUnit.querySelector('.community-boundary-upload .input-field.select-file-input').value = ''
+            clearShapeFileInput(selectionUnit)
 
         } catch (error) {
             console.error('Error Fetching boundary:', error)
@@ -447,8 +450,7 @@
         self.closest('.boundary-selection-unit').querySelector('.selected-location').classList.remove('invisible')
         enableContinueButton()
 
-        // clear search input
-        self.closest('.boundary-selection-unit').querySelector('input.search').value = ''
+        clearNLInput(selectionUnit)
 
       } catch (e) {
         raiseError(selectionUnit, 'File not accepted. Please upload another file')
@@ -497,12 +499,8 @@
       // hide selected location
       selectionUnit.querySelector('.selected-location').classList.add('invisible')
 
-      // hide selected Native Land location
-      selectionUnit.querySelector('.community-boundary-search .input-field.search').value = ''
-
-      // hide uploaded file name
-      selectionUnit.querySelector('.community-boundary-upload .input-field.select-file-input').value = ''
-
+      clearNLInput(selectionUnit)
+      clearShapeFileInput(selectionUnit)
       disableContinueButton()
     }
 </script>
