--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -225,7 +225,7 @@
         </div>
         <i class="fa fa-spinner fa-spin fa-2x spinner"></i>
     </div>
-    <input type="text" id="boundary-data" name="boundary" class="invisible" />
+    <input type="text" id="boundary-data" name="boundary_payload" class="invisible" />
 </span>
 <script>
     let BoundaryPayLoad = {}
