--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -253,6 +253,31 @@
                         </p>
                     </div>
                 </div>
+                {% if project.boundary.coordinates and project.share_boundary_publicly %}
+                <div class="flex-this">
+                    <div class="project-left-sidebar"><p class="bold">Boundary</p></div>
+                    <div>
+                        <div class="flex-this">
+                            <p>
+                                <iframe src="{% url 'community-boundary-view' community.id %}" data-testid="community-boundary-iframe"
+                                style="width: 100%; height: 450px; border: 1px solid cadetblue;">
+                                </iframe>
+                                {% if 'native-land.ca' in project.source_of_boundary %}
+                                    <span class="italic">
+                                        This community boundary originates from the
+                                        <a href="https://native-land.ca/contact"
+                                           class="default-a" target="_blank" rel="noopener">
+                                            Native Land Digital database
+                                            <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+                                        </a>.
+                                    </span>
+                                    <br><br>
+                                {% endif %}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
 
             {% if notices %}
