feat: account can always see own project boundary

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -253,7 +253,7 @@
                         </p>
                     </div>
                 </div>
-                {% if project.boundary.coordinates and project.share_boundary_publicly %}
+                {% if project.boundary.coordinates %}
                 <div class="flex-this">
                     <div class="project-left-sidebar"><p class="bold">Boundary</p></div>
                     <div>
