--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -259,12 +259,12 @@
                     <div>
                         <div class="flex-this">
                             <p>
-                                <iframe src="{% url 'community-boundary-view' community.id %}" data-testid="community-boundary-iframe"
+                                <iframe src="{% url 'project-boundary-view' project.id %}" data-testid="project-boundary-iframe"
                                 style="width: 100%; height: 450px; border: 1px solid cadetblue;">
                                 </iframe>
                                 {% if 'native-land.ca' in project.source_of_boundary %}
                                     <span class="italic">
-                                        This community boundary originates from the
+                                        This project boundary originates from the
                                         <a href="https://native-land.ca/contact"
                                            class="default-a" target="_blank" rel="noopener">
                                             Native Land Digital database
