feat: project boundary is displayed only if share publicly is selected or if user is a creator

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -253,8 +253,9 @@
                         </p>
                     </div>
                 </div>
-                {% if project.boundary.coordinates %}
-                <div class="flex-this">
+                {% if user_is_creator or project.share_boundary_publicly %}
+                    {% if project.boundary.coordinates %}
+                    <div class="flex-this">
                     <div class="project-left-sidebar"><p class="bold">Boundary</p></div>
                     <div>
                         <div class="flex-this">
@@ -277,6 +278,7 @@
                         </div>
                     </div>
                 </div>
+                    {% endif %}
                 {% endif %}
             </div>
 
@@ -1216,7 +1218,7 @@
         <div class="modal-defaults deactivate-modal flex-this column w-100">
             <div class="w-100">
                 <div>
-                    <h5 class="primary-black-text no-top-margin">This account needs to be confirmed before public view is available to others.</h5>  
+                    <h5 class="primary-black-text no-top-margin">This account needs to be confirmed before public view is available to others.</h5>
                 </div>
                 <div class="flex-this w-100 text-align-center">   
                     <div class="margin-left-1 primary-btn action-btn" onclick="cancelDisclaimer()">OK</div>
