feat: refactored code

--- a/templates/account_settings_pages/_community-boundary.html
+++ b/templates/account_settings_pages/_community-boundary.html
@@ -87,6 +87,6 @@
             Add your community boundary by either searching the Native Land Digital database or uploading a shape file
         </div>
 
-        {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' %}
+        {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' with entity=community %}
     </div>
 {% endblock %}
