--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -291,7 +291,7 @@
             <h3>Project Boundary</h3>
 
             <div class="margin-bottom-1 margin-top-1 w-80">
-                {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' with create_mode=True %}
+                {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' with create_mode=True entity=project %}
             </div>
         </div>
 
