--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -489,7 +489,8 @@
         showSpinner()
         BoundaryPayLoad.share_boundary_publicly = document.getElementById("share-boundary-publicly").checked
 
-        const response = await fetch("{% url 'update-community-boundary-data' entity.id %}", {
+        const url = "{{ set_boundary_url }}"
+        const response = await fetch(url, {
             method: 'POST',
             body: JSON.stringify(BoundaryPayLoad),
             headers: {
