feat: added website input field to community account creation

--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -46,6 +46,11 @@
                 <label class="pad-top-1-5" for="country">Country</label><br>
                 {{ form.country }}
             </div>
+
+            <div class="margin-top-8">
+                <label>Community Website</label>
+                {{ form.website }}
+            </div>
         </div>
 
         <div class="w-100">
