feat: added website input field to researcher account creation

--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -68,6 +68,13 @@
                 <small id="charCount" class="block text-align-right">200/200</small>
             </div>
 
+            <div class="w-100">
+                <div class="pad-top-1-5">
+                    <label>Community Website</label>
+                    {{ form.website }}
+                </div>
+            </div>
+
             <div class="flex-this space-between">
                 <div>
                     {% if form.errors %}
