feat: updated form label names

--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="margin-top-8">
-            <label>Community Website</label>
+            <label>Institution Website</label>
             {{ form.website }}
         </div>
 
