--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -70,7 +70,7 @@
 
             <div class="w-100">
                 <div class="pad-top-1-5">
-                    <label>Community Website</label>
+                    <label>Researcher Website</label>
                     {{ form.website }}
                 </div>
             </div>
