feat: added website to researcher creation account email

--- a/templates/snippets/emails/internal/researcher-account-connection.html
+++ b/templates/snippets/emails/internal/researcher-account-connection.html
@@ -18,6 +18,10 @@
         <td>{% if researcher.description %} {{ researcher.description }} {% else %} None provided {% endif %}</td>
     </tr>
     <tr>
+        <th>Website:</th>
+        <td>{% if researcher.website %} {{ researcher.website }} {% else %} None provided {% endif %}</td>
+    </tr>
+    <tr>
         <th>ORCiD:</th>
         <td>{% if researcher.orcid %} {{ researcher.orcid }} {% else %} None provided {% endif %}</td>
     </tr>
