--- a/templates/snippets/emails/internal/community-application.html
+++ b/templates/snippets/emails/internal/community-application.html
@@ -35,6 +35,10 @@
         <th>Description:</th>
         <td>{{ data.description }}</td>
     </tr>
+    <tr>
+        <th>Website:</th>
+        <td>{% if data.website %} {{ data.website }} {% else %} None provided {% endif %}</td>
+    </tr>
 </table>
 
 
